# boost-asio-flatbuffers-rpc

./: CMakeLists.txt  Project Structure.txt  README.md
client/: main.cpp
client/services/: banking_client_stub.h
gen_fbs/: CMakeLists.txt  README.md
gen_fbs/entities/: Player_old  Vec3.h  ZMonster.h  generated_entity_includes.h  other_entities.h  reflect.h  reflect_working
gen_fbs/fbs_schemas/: Player.fbs  Player1.fbs  Vec3.fbs  ZMonster.fbs
gen_fbs/generated_flatbuffers/: Player1_generated.h  Vec3_generated.h
gen_fbs/generator/: CMakeLists.txt  fbs_generator.cpp  fbs_generator_old.cpp
gen_fbs/src/: main.cpp
rpc/: rpc_client.h  rpc_dispatcher.h  rpc_header.h  rpc_server.h
schema/: banking.fbs  generateSchema.sh
server/: main.cpp
server/services/: banking_service_impl.h
stubs/: generate_rpc_stubs.cpp
